Made some corrections and inserted an img within a div with border, adjusted width, and applied shadow

--- a/index.html
+++ b/index.html
@@ -10,22 +10,9 @@
 <body>
     <h1>JavaScript Events Assignment</h1>
     <!-- assignment 1 - show less clickable button with sliced text -->
-    <p id="smallPara">
-        Technology has transformed communication by making it faster, more accessible, and more diverse than ever
-        before...
-    </p>
-    <div id="expandPara">
-        <p>
-            Technology has transformed communication by making it faster, more accessible, and more diverse than ever
-            before. With the rise of smartphones, social media, and instant messaging platforms, people can connect
-            across the globe in real time, breaking down barriers of distance and time. Video calls and collaborative
-            tools have also enhanced professional interactions, enabling remote work and international teamwork.
-            However, this digital shift has also introduced challenges, such as reduced face-to-face interaction,
-            shorter attention spans, and concerns over privacy. Overall, technology has revolutionized how we share
-            information and build relationships, creating both opportunities and responsibilities in the way we connect.
-        </p>
-    </div>
-    <button id="btn" onclick="control()">See more</button>
+    <h2>Toggle Text Example</h2>
+    <div id="para"></div>
+    <button id="btn" onclick="toggleText()">See more</button>
 
     <!-- assignment 2 - individual check name and email  -->
     <h2>Check your name and email</h2>
@@ -39,7 +26,10 @@
         <button type="submit" id="checkBtn" onclick="check(event)">Submit</button>
     </form>
 
-    
+    <!-- assigmrnt -- create a modern style div with border colors shadow and insert a defined image  -->
+    <h2>Styled Div with Image</h2>
+    <div id="styledDiv"></div>
+    <br><br><br><br>
     <script src="index.js"></script>
 </body>
 
